--- a/.github/workflows/compile_passport.yaml
+++ b/.github/workflows/compile_passport.yaml
@@ -1,4 +1,4 @@
-name: Compile Passport-vault CI
+name: Compile Tundra-vault CI
 
 on:
   push:
@@ -12,7 +12,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build-passport-vault:
+  build-tundra-vault:
     runs-on: ubuntu-latest
 
     strategy:
@@ -32,7 +32,7 @@ jobs:
 
       - name: Compile the frontend submodule
         run: |
-          cd passport-vault-frontend/
+          cd tundra-vault-frontend/
           npm ci
           npm run build --verbose --if-present
           cd ../
