--- a/shortcut/Arctica.desktop
+++ b/shortcut/Arctica.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Version=1.0
-Name=Passport-vault
-Exec=/home/ubuntu/passport-vault
+Name=Tundra-vault
+Exec=/home/ubuntu/tundra-vault
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Icon=/home/ubuntu/passport-vault.jpeg
+Icon=/home/ubuntu/tundra-vault.jpeg
 StartupNotify=true
